# iaof

./: .gitignore  README.md  bot.py  dev-requirements.in  dev-requirements.txt  instructions.md  llm.py  pyproject.toml  radoteur.py  requirements.in  requirements.txt  system_prompt.md
radoteurs/: __init__.py  anthropic.py  base.py  messages.py  openai.py  ping.py
tests/: test_prompt.py  test_text.py
